force-app/main/default/objects/Apttus__WizardStep2__c/fields/Apttus__ContextType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ContextType__c</fullName>
    <description>Type of context, whether its All or Object. 
All means that any input can be used in the step design. 
Object means that only aligned (same object) inputs can be used in the step design.</description>
    <inlineHelpText>Type of context, whether its All or Object. 
All means that any input can be used in the step design. 
Object means that only aligned (same object) inputs can be used in the step design.</inlineHelpText>
    <label>Context Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>