force-app/main/default/objects/Apttus__WizardStep2__c/fields/Apttus__ImageFilename__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ImageFilename__c</fullName>
    <description>Name of the image file to be displayed on this step in wizard</description>
    <inlineHelpText>Name of the image file to be displayed on this step in wizard</inlineHelpText>
    <label>Image Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>