force-app/main/default/objects/Apttus__WizardStep2__c/fields/Apttus__InputGroupOption__c.field-meta.xml
<CustomField>
    <fullName>Apttus__InputGroupOption__c</fullName>
    <description>Indicates how the inputs within a step are grouped. Repeatable allows the user to enter multiple set of values of configured inputs and Table Layout displays it as a table.</description>
    <inlineHelpText>Indicates how the inputs within a step are grouped. Repeatable allows the user to enter multiple set of values of configured inputs and Table Layout displays it as a table.</inlineHelpText>
    <label>Input Group Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Repeatable</fullName>
            </value>
            <value>
                <fullName>Table Layout</fullName>
            </value>
            <value>
                <fullName>Two Column Layout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>