force-app/main/default/objects/Apttus__WizardStep2__c/fields/Apttus__Keywords__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Keywords__c</fullName>
    <description>Additional field for use in search and selection</description>
    <inlineHelpText>Additional field for use in search and selection</inlineHelpText>
    <label>Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>