force-app/main/default/objects/Apttus__WizardStep2__c/fields/Apttus__RuntimeHelpText__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RuntimeHelpText__c</fullName>
    <description>Describe what the runtime user can see as a help or instruction description of this Step.</description>
    <inlineHelpText>Describe what the runtime user can see as a help or instruction description of this Step.</inlineHelpText>
    <label>Runtime Help Text</label>
    <type>TextArea</type>
</CustomField>