force-app/main/default/objects/Apttus__WizardStep2__c/fields/Apttus__WizardDesignId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardDesignId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to wizard design this step belongs to.</description>
    <inlineHelpText>Lookup to wizard design this step belongs to.</inlineHelpText>
    <label>Wizard Design</label>
    <referenceTo>Apttus__WizardDesign__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <type>Lookup</type>
</CustomField>